# sql-convert

./: .gitattributes  .gitignore  README.md  config.template.yml  convert.py  main.py  pyproject.toml  requirements.txt  rules.py  sql_parser.py
converter/: capabilities.py  pipeline.py  registry.py
converter/dialects/: __init__.py  base.py  kingbase.py  mysql.py  oracle.py  pgsql.py  sqlite.py  sqlserver.py
converter/mappings/: functions.py  types.py
converter/pipeline/: __init__.py  pipeline.py  rule_context.py
converter/rules/: __init__.py  cleanup.py  constraint.py  identifier.py  modifier.py  postprocess.py  type_mapping.py
core/: __init__.py  diagnostics.py  exceptions.py  logger.py
model/: __init__.py  column.py  constraint.py  index.py  schema.py  table.py
parser/: insert_stream.py
reader/: __init__.py  classifier.py  sql_reader.py
sql_convert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: actual_sniff_oracle.sql  edge_cases_input.sql  edge_cases_output.sql  sample_input.sql  sample_output.sql  sniff_oracle_input.sql  test_compat.py  test_conditional_comment.py  test_diagnostics.py  test_index_parens.py  test_logger.py  test_report.py  test_sniff.py  test_stream.py  test_web.py
tests/e2e/: test_e2e_base.py  test_e2e_cases.py
ui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ui/src/: App.vue  main.ts  shims-sm-crypto.d.ts  style.css
utils/: __init__.py  compat.py  config_manager.py  report.py
utils/sql_parser/: __init__.py  ddl_parser.py  (+4 more)
web/: __init__.py  server.py
writer/: sql_writer.py
(+108 files in other folders)
